# plover

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Renderer.h
include/plover/: Renderer.h  input.h  plover.h  render.h
libraries/header_libs/: CMakeLists.txt
libraries/header_libs/include/stb/: stb_image.h
libraries/header_libs/include/vma/: vk_mem_alloc.h
src/: AssetLoader.cpp  AssetLoader.h  DescriptorAllocator.cpp  DescriptorAllocator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MessageQueue.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  UI.cpp  UI.h  VertexBuffer.cpp  VertexBuffer.h  VulkanAllocator.cpp  VulkanAllocator.h  VulkanContext.cpp  VulkanContext.h  includes.h  linux_plover.cpp  plover.cpp  plover_int.h  ttfRenderer.cpp  ttfRenderer.h  win32_plover.cpp
